Prepared to start substituting people maybe

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -227,6 +227,10 @@
     "\n",
     "    return thisevent\n",
     "\n",
+    "def make_substitution(playing_df, roster_df, side):\n",
+    "    print(playing_df[playing_df['which_team'] == (1-side)])\n",
+    "    return playing_df\n",
+    "\n",
     "\n",
     "def advance_runners(evnt, basers, oots, scr, teem):   # If there is baserunning info provided, obey it\n",
     "\n",
@@ -284,7 +288,7 @@
     "#        print('on base after: ',basers)\n",
     "#        print('Score: ',scr)\n",
     "        \n",
-    "    return ''\n",
+    "    return (evnt, basers, oots, scr)\n",
     "\n",
     "def advance_batter(evnt, basers, oots, scr, teem):   \n",
     "\n",
@@ -335,13 +339,13 @@
     "#    print('Score: ',scr)\n",
     "#    print('---------------')\n",
     "\n",
-    "    return ''\n",
+    "    return (evnt, basers, oots, scr)\n",
     "print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -351,6 +355,9 @@
      "output_type": "stream",
      "text": [
       "BAL201208060...\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[1, 0, 'K23']\n",
       "[1, 0, '8/F']\n",
       "[1, 0, '13/G-']\n",
@@ -359,6 +366,9 @@
       "[1, 1, '2/P2F']\n",
       "[1, 1, 'D8/L+.1-3']\n",
       "[1, 1, '1/G-']\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[2, 0, '8/F']\n",
       "[2, 0, 'K']\n",
       "[2, 0, '7/L']\n",
@@ -368,12 +378,18 @@
       "[2, 1, '7/F']\n",
       "[2, 1, 'HR/9/F.2-H']\n",
       "[2, 1, '63/G']\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[3, 0, '43/G+']\n",
       "[3, 0, '7/F']\n",
       "[3, 0, '7/F']\n",
       "[3, 1, '53/G']\n",
       "[3, 1, '63/G']\n",
       "[3, 1, '9/F']\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[4, 0, '6/P']\n",
       "[4, 0, 'W']\n",
       "[4, 0, 'K']\n",
@@ -382,6 +398,9 @@
       "[4, 1, '9/F']\n",
       "[4, 1, 'S6/P']\n",
       "[4, 1, '13/G-']\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[5, 0, '8/F']\n",
       "[5, 0, 'S7/G']\n",
       "[5, 0, '46(1)/FO/G']\n",
@@ -389,6 +408,9 @@
       "[5, 1, '43/G']\n",
       "[5, 1, '63/G']\n",
       "[5, 1, '63/G']\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[6, 0, 'S4/BG.B-2(E4/TH1)']\n",
       "[6, 0, '43/G.2-3']\n",
       "[6, 0, '1!3/G+']\n",
@@ -396,6 +418,9 @@
       "[6, 1, '63/G']\n",
       "[6, 1, '63/G']\n",
       "[6, 1, '43/G']\n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "[7, 0, 'S9/F-']\n",
       "[7, 0, 'K']\n",
       "[7, 0, 'K']\n",
@@ -404,12 +429,24 @@
       "[7, 1, 'D7/L+']\n",
       "[7, 1, '63/G']\n",
       "[7, 1, '9/F']\n",
+      "              event_type  inning  home_or_visitor  batterID pitch_count  \\\n",
+      "event_in_game                                                             \n",
+      "54             sub        8       1                mclon001               \n",
+      "58             sub        8       1                strop001               \n",
+      "\n",
+      "              pitch_sequence event comment sub_batting_order sub_position  \\\n",
+      "event_in_game                                                               \n",
+      "54                                          7                 7             \n",
+      "58                                          0                 1             \n",
+      "\n",
+      "                     gameID play modifiers baserunning  \n",
+      "event_in_game                                           \n",
+      "54             BAL201208060                             \n",
+      "58             BAL201208060                             \n",
       "[8, 0, 'NP']\n",
       "\n",
       "\n",
       "NO PLAY:  53\n",
-      "-------\n",
-      "SUB at ev  54 :  ['mclon001', '7', '7']\n",
       "-------\n",
       "[8, 0, 'D9/L']\n",
       "[8, 0, 'S8/L.2-H;BX2(836)']\n",
@@ -418,27 +455,118 @@
       "\n",
       "NO PLAY:  57\n",
       "-------\n",
-      "SUB at ev  58 :  ['strop001', '0', '1']\n",
-      "-------\n",
       "[8, 0, 'W']\n",
       "[8, 0, 'K']\n",
       "[8, 0, '6/L']\n",
+      "SUB at ev  54 :  event_type           sub         \n",
+      "inning               8           \n",
+      "home_or_visitor      1           \n",
+      "batterID             mclon001    \n",
+      "pitch_count                      \n",
+      "pitch_sequence                   \n",
+      "event                            \n",
+      "comment                          \n",
+      "sub_batting_order    7           \n",
+      "sub_position         7           \n",
+      "gameID               BAL201208060\n",
+      "play                             \n",
+      "modifiers                        \n",
+      "baserunning                      \n",
+      "Name: 54, dtype: object\n",
+      "-------\n",
+      "   playerID                 name  batting_order  position  which_team\n",
+      "0  ackld001  \"Dustin Ackley\"      1              4         0         \n",
+      "1  saunm001  \"Michael Saunders\"   2              8         0         \n",
+      "2  montj003  \"Jesus Montero\"      3              10        0         \n",
+      "3  jasoj001  \"John Jaso\"          4              2         0         \n",
+      "4  seagk001  \"Kyle Seager\"        5              5         0         \n",
+      "5  carpm001  \"Mike Carp\"          6              3         0         \n",
+      "6  wellc001  \"Casper Wells\"       7              7         0         \n",
+      "7  thame001  \"Eric Thames\"        8              9         0         \n",
+      "8  kawam001  \"Munenori Kawasaki\"  9              6         0         \n",
+      "9  vargj001  \"Jason Vargas\"       0              1         0         \n",
+      "SUB at ev  58 :  event_type           sub         \n",
+      "inning               8           \n",
+      "home_or_visitor      1           \n",
+      "batterID             strop001    \n",
+      "pitch_count                      \n",
+      "pitch_sequence                   \n",
+      "event                            \n",
+      "comment                          \n",
+      "sub_batting_order    0           \n",
+      "sub_position         1           \n",
+      "gameID               BAL201208060\n",
+      "play                             \n",
+      "modifiers                        \n",
+      "baserunning                      \n",
+      "Name: 58, dtype: object\n",
+      "-------\n",
+      "   playerID                 name  batting_order  position  which_team\n",
+      "0  ackld001  \"Dustin Ackley\"      1              4         0         \n",
+      "1  saunm001  \"Michael Saunders\"   2              8         0         \n",
+      "2  montj003  \"Jesus Montero\"      3              10        0         \n",
+      "3  jasoj001  \"John Jaso\"          4              2         0         \n",
+      "4  seagk001  \"Kyle Seager\"        5              5         0         \n",
+      "5  carpm001  \"Mike Carp\"          6              3         0         \n",
+      "6  wellc001  \"Casper Wells\"       7              7         0         \n",
+      "7  thame001  \"Eric Thames\"        8              9         0         \n",
+      "8  kawam001  \"Munenori Kawasaki\"  9              6         0         \n",
+      "9  vargj001  \"Jason Vargas\"       0              1         0         \n",
       "[8, 1, '8!/F-']\n",
       "[8, 1, 'DGR/7/F']\n",
       "[8, 1, '53/G']\n",
       "[8, 1, '63/G']\n",
+      "              event_type  inning  home_or_visitor  batterID pitch_count  \\\n",
+      "event_in_game                                                             \n",
+      "67             sub        9       1                johnj010               \n",
+      "\n",
+      "              pitch_sequence event comment sub_batting_order sub_position  \\\n",
+      "event_in_game                                                               \n",
+      "67                                          0                 1             \n",
+      "\n",
+      "                     gameID play modifiers baserunning  \n",
+      "event_in_game                                           \n",
+      "67             BAL201208060                             \n",
       "[9, 0, 'NP']\n",
       "\n",
       "\n",
       "NO PLAY:  66\n",
-      "-------\n",
-      "SUB at ev  67 :  ['johnj010', '0', '1']\n",
       "-------\n",
       "[9, 0, 'K']\n",
       "[9, 0, 'S6/G']\n",
       "[9, 0, '13/G-.1-2']\n",
       "[9, 0, 'S1/G-.2-3']\n",
       "[9, 0, '64(1)/FO/G']\n",
+      "SUB at ev  67 :  event_type           sub         \n",
+      "inning               9           \n",
+      "home_or_visitor      1           \n",
+      "batterID             johnj010    \n",
+      "pitch_count                      \n",
+      "pitch_sequence                   \n",
+      "event                            \n",
+      "comment                          \n",
+      "sub_batting_order    0           \n",
+      "sub_position         1           \n",
+      "gameID               BAL201208060\n",
+      "play                             \n",
+      "modifiers                        \n",
+      "baserunning                      \n",
+      "Name: 67, dtype: object\n",
+      "-------\n",
+      "   playerID                 name  batting_order  position  which_team\n",
+      "0  ackld001  \"Dustin Ackley\"      1              4         0         \n",
+      "1  saunm001  \"Michael Saunders\"   2              8         0         \n",
+      "2  montj003  \"Jesus Montero\"      3              10        0         \n",
+      "3  jasoj001  \"John Jaso\"          4              2         0         \n",
+      "4  seagk001  \"Kyle Seager\"        5              5         0         \n",
+      "5  carpm001  \"Mike Carp\"          6              3         0         \n",
+      "6  wellc001  \"Casper Wells\"       7              7         0         \n",
+      "7  thame001  \"Eric Thames\"        8              9         0         \n",
+      "8  kawam001  \"Munenori Kawasaki\"  9              6         0         \n",
+      "9  vargj001  \"Jason Vargas\"       0              1         0         \n",
+      "Empty DataFrame\n",
+      "Columns: [event_type, inning, home_or_visitor, batterID, pitch_count, pitch_sequence, event, comment, sub_batting_order, sub_position, gameID, play, modifiers, baserunning]\n",
+      "Index: []\n",
       "Final score:  [1, 3]\n"
      ]
     }
@@ -465,10 +593,13 @@
     "\n",
     "    foundinnings = thisgame_df['inning'].drop_duplicates().values.tolist()\n",
     "    theseinnings = numpy.arange(1, numpy.max(foundinnings)+2) # it's +2 b/c it expects a 0-based list\n",
-    "    \n",
-    "    thisgame_df['home_or_visitor'] = numpy.where(thisgame_df['event_type'] == 'sub', 1 - thisgame_df['home_or_visitor'], thisgame_df['home_or_visitor'])\n",
+    "\n",
+    "#    If we need to switch the sub side.\n",
+    "#    thisgame_df['home_or_visitor'] = numpy.where(thisgame_df['event_type'] == 'sub', 1 - thisgame_df['home_or_visitor'], thisgame_df['home_or_visitor'])\n",
     "    \n",
     "    for ing in theseinnings:\n",
+    "        thisinn = thisgame_df[thisgame_df['inning'] == ing].sort_index()\n",
+    "        print(thisinn[thisinn['event_type'] == 'sub'])\n",
     "        for side in range(0,2):                           # iter through each half-inning\n",
     "            halfinn = thisgame_df[(thisgame_df['inning'] == ing) & (thisgame_df['home_or_visitor'] == side)]\n",
     "            onbase = ['', '', '']\n",
@@ -476,11 +607,11 @@
     "            fieldingflag = 1 - side  # flag: makes fielding team the opposite of batting team\n",
     "\n",
     "            for eig, thisevent in halfinn.iterrows():    # iter through all events in this half-inn    \n",
-    "                \n",
+    "\n",
     "                if (thisevent['event_type'] == 'sub'):\n",
-    "                    print('SUB at ev ',eig,': ',thisevent[['batterID', 'sub_batting_order', 'sub_position']].tolist())\n",
+    "                    print('SUB at ev ',eig,': ',thisevent)#thisevent[['batterID', 'sub_batting_order', 'sub_position']].tolist())\n",
     "                    print('-------')\n",
-    "                    \n",
+    "                    playing_df = make_substitution(playing_df, roster_df, side)\n",
     "                else:\n",
     "                    print(thisevent[['inning', 'home_or_visitor', 'event']].tolist())\n",
     "\n",
@@ -511,7 +642,7 @@
     "\n",
     "                    # if there is baserunning info, implement it first\n",
     "                    if (thisevent['baserunning'] != ''):\n",
-    "                        advance_runners(\n",
+    "                        (thisevent, onbase, nOuts, score) = advance_runners(\n",
     "                            thisevent,\n",
     "                            onbase,\n",
     "                            nOuts,\n",
@@ -524,7 +655,7 @@
     "\n",
     "                    # If the play is a hit, advance baserunners with fcn advance_runners(evnt, basers, oots, scr, teem):\n",
     "                    if (re.match(r'[S|D|T|H|W|I|E|F]',thisevent['play'])):\n",
-    "                        advance_batter(\n",
+    "                        (thisevent, onbase, nOuts, score) = advance_batter(\n",
     "                            thisevent,\n",
     "                            onbase,\n",
     "                            nOuts,\n",
