Processed 1927 and 1938 events

--- a/process_events_try2.ipynb
+++ b/process_events_try2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,15 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "# runs in about 5 minutes\n",
     "#with open('events_raw.json','r') as f:\n",
-    "with open('events_raw_2012-2016.json','r') as f:\n",
+    "with open('events_raw_1927_1938.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "#pprint(allgames[2])   \n",
@@ -34,11 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing game 0...\n",
+      "processing game 1,000...\n",
+      "preparing to save file...\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_team', 'sub_batting_order', 'sub_position']#, 'gameID']\n",
@@ -48,7 +67,6 @@
     "for i in range(0,len(allgames)):\n",
     "    thisgamedict = allgames[i]\n",
     "    thisgameevents_df = pandas.DataFrame(thisgamedict['events'], columns=column_list)\n",
-    "    inning = 1\n",
     "    if (numpy.mod(i,1000) == 0):\n",
     "        print('processing game {0:,.0f}...'.format(i))\n",
     "    for j in range(0,len(thisgameevents_df)): #- 1):\n",
@@ -61,7 +79,8 @@
     "#                print('-------------')\n",
     "#                print(thisgameevents_df[show_columns_for_weirdness].iloc[j])\n",
     "#                print('\\n')\n",
-    "    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
+    "#    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
+    "    thisgameevents_df = thisgameevents_df[thisgameevents_df['event_type'] != 'com']\n",
     "    thisgameevents_df = thisgameevents_df.drop('event_in_game',axis=1)\n",
     "    thisgameevents_df = thisgameevents_df.reset_index(drop=True)\n",
     "    thisgameevents_df.index.name = 'event_in_game'\n",
@@ -69,7 +88,7 @@
     "\n",
     "print('preparing to save file...')\n",
     "#thisgameevents_df\n",
-    "with open('events.json','w') as f:\n",
+    "with open('events_1927_1938.json','w') as f:\n",
     "    json.dump(allgames, f)\n",
     "print('done')"
    ]
