--- a/process_events_try2.ipynb
+++ b/process_events_try2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
    "source": [
     "# runs in about 5 minutes\n",
     "#with open('events_raw.json','r') as f:\n",
-    "with open('events_raw_1927_1938.json','r') as f:\n",
+    "with open('events_raw_2012-2016.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "#pprint(allgames[2])   \n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -53,6 +53,16 @@
      "text": [
       "processing game 0...\n",
       "processing game 1,000...\n",
+      "processing game 2,000...\n",
+      "processing game 3,000...\n",
+      "processing game 4,000...\n",
+      "processing game 5,000...\n",
+      "processing game 6,000...\n",
+      "processing game 7,000...\n",
+      "processing game 8,000...\n",
+      "processing game 9,000...\n",
+      "processing game 10,000...\n",
+      "processing game 11,000...\n",
       "preparing to save file...\n",
       "done\n"
      ]
@@ -88,7 +98,7 @@
     "\n",
     "print('preparing to save file...')\n",
     "#thisgameevents_df\n",
-    "with open('events_1927_1938.json','w') as f:\n",
+    "with open('events_2012-2016.json','w') as f:\n",
     "    json.dump(allgames, f)\n",
     "print('done')"
    ]
