--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +232,30 @@
     "\n",
     "    return thisevent\n",
     "\n",
+    "def get_sub_name(players_curr, theroster, evnt, gameinfo):\n",
+    "    \n",
+    "    if (evnt['sub_team'] == 0):\n",
+    "        sub_team_name = gameinfo['visteam'].values[0]\n",
+    "    else:\n",
+    "        sub_team_name = gameinfo['hometeam'].values[0]\n",
+    "    yeer = gameinfo['date'].apply(lambda x: x.year).values[0]\n",
+    "    sub_name_first = theroster['nameFirst'].iloc[\n",
+    "            numpy.where(\n",
+    "                (theroster['playerID'] == evnt['batterID']) & \n",
+    "                (theroster['year'] == yeer) &\n",
+    "                (theroster['team'] == sub_team_name)\n",
+    "            )\n",
+    "        ].values[0]\n",
+    "    sub_name_last = theroster['nameLast'].iloc[\n",
+    "            numpy.where(\n",
+    "                (theroster['playerID'] == evnt['batterID']) & \n",
+    "                (theroster['year'] == yeer) &\n",
+    "                (theroster['team'] == sub_team_name)\n",
+    "            )\n",
+    "        ].values[0]\n",
+    "    sub_name = '\"' + sub_name_first + ' ' + sub_name_last + '\"'\n",
     "\n",
+    "    return sub_name\n",
     "\n",
     "def advance_runners(evnt, basers, oots, scr, teem):   # If there is baserunning info provided, obey it\n",
     "\n",
@@ -344,30 +367,17 @@
     "    return (evnt, basers, oots, scr)\n",
     "\n",
     "\n",
-    "def make_substitution(players_curr, theroster, evnt, yeer):\n",
+    "\n",
+    "def make_substitution(players_curr, theroster, evnt, gameinfo):\n",
     "        \n",
-    "    #df['playerID'] = df['playerID'].to_string()\n",
-    "    #df['name'] = df['name'].to_string()\n",
-    "    \n",
-    "#    print('SUB at ev ',eig,': ', evnt)#evnt[['inning','home_or_visitor','sub_team','sub_batting_order','sub_position']].tolist())#thisevent[['batterID', 'sub_batting_order', 'sub_position']].tolist())\n",
-    "#    print('-------')\n",
-    "    print('\\n')\n",
-    "    print('Inning {0:.0f} team {1:.0f} batting...'.format(evnt['inning'], evnt['home_or_visitor']))\n",
+    "#    print('\\n')\n",
+    "#    print('Inning {0:.0f} team {1:.0f} batting...'.format(evnt['inning'], evnt['home_or_visitor']))\n",
     "\n",
     "    if (evnt['home_or_visitor'] == evnt['sub_team']):\n",
     "        print('batting sub')\n",
     "        \n",
     "    else:\n",
     "        print('fielding sub')\n",
-    "                                   \n",
-    "        print('Old player: ',players_curr['playerID'].loc[\n",
-    "                (players_curr['which_team'] == evnt['sub_team']) & \n",
-    "                (players_curr['batting_order'] == evnt['sub_batting_order'])\n",
-    "        ].tolist()[0])\n",
-    "\n",
-    "        print('New player desired: ', evnt['batterID'])\n",
-    "        \n",
-    "        print('\\n')\n",
     "        \n",
     "        players_curr.loc[\n",
     "            (\n",
@@ -379,17 +389,9 @@
     "            (\n",
     "                (players_curr['which_team'] == evnt['sub_team']) & \n",
     "                (players_curr['position'] == evnt['sub_position'])\n",
-    "                ), 'playerID'] = evnt['batterID']\n",
-    "\n",
-    "        print(\n",
-    "            theroster[\n",
-    "                (\n",
-    "                    (theroster['playerID'] == evnt['batterID']) & \n",
-    "                    (theroster['team'] == evnt['sub_team']) &\n",
-    "                    (theroster['year'] == yeer)\n",
-    "                    )\n",
-    "            ])\n",
-    "            \n",
+    "                ), 'name'] = get_sub_name(players_curr, theroster, evnt, gameinfo)\n",
+    "        \n",
+    "#        print(players_curr)\n",
     "    return players_curr\n",
     "\n",
     "print('done')"
@@ -397,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -408,31 +410,10 @@
      "output_type": "stream",
      "text": [
       "BAL201208060...\n",
-      "[8, 0, 'mclon001', '', 1.0, 7.0]\n",
-      "id\n",
-      "BAL201208060    2012\n",
-      "Name: date, dtype: int64\n",
-      "\n",
-      "\n",
-      "Inning 8 team 0 batting...\n",
       "fielding sub\n",
-      "Old player:  fordl001\n",
-      "New player desired:  mclon001\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Can only compare identically-labeled Series objects",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-125-3f0e03cfad2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m                     \u001b[0mthisyear\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mthis_info_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthisyear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m                     \u001b[0mplaying_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmake_substitution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplaying_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mroster_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthisevent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthisyear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m                     \u001b[0mthisevent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'visiting_team'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mthis_info_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'visteam'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-124-3bb6e99a2529>\u001b[0m in \u001b[0;36mmake_substitution\u001b[1;34m(players_curr, theroster, evnt, yeer)\u001b[0m\n\u001b[0;32m    241\u001b[0m                     \u001b[1;33m(\u001b[0m\u001b[0mtheroster\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'playerID'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mevnt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'batterID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    242\u001b[0m                     \u001b[1;33m(\u001b[0m\u001b[0mtheroster\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'team'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mevnt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sub_team'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 243\u001b[1;33m                     \u001b[1;33m(\u001b[0m\u001b[0mtheroster\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'year'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0myeer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    244\u001b[0m                     )\n\u001b[0;32m    245\u001b[0m             ])\n",
-      "\u001b[1;32m/home/idies/anaconda3/lib/python3.5/site-packages/pandas/core/ops.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(self, other, axis)\u001b[0m\n\u001b[0;32m    816\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_indexed_same\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    817\u001b[0m                 \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Can only compare identically-labeled Series objects'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 818\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    819\u001b[0m             return self._constructor(na_op(self.values, other.values),\n\u001b[0;32m    820\u001b[0m                                      index=self.index, name=name)\n",
-      "\u001b[1;31mValueError\u001b[0m: Can only compare identically-labeled Series objects"
+      "fielding sub\n",
+      "fielding sub\n",
+      "Final score:  [1, 3]\n"
      ]
     }
    ],
@@ -478,10 +459,9 @@
     "            for eig, thisevent in halfinn.iterrows():    # iter through all events in this half-inn    \n",
     "\n",
     "                if (thisevent['event_type'] == 'sub'):\n",
-    "                    print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event', 'sub_team', 'sub_position']].tolist())\n",
+    "#                    print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event', 'sub_team', 'sub_position']].tolist())\n",
     "                    thisyear = this_info_df['date'].apply(lambda x: x.year)\n",
-    "                    print(thisyear)\n",
-    "                    playing_df = make_substitution(playing_df, roster_df, thisevent, thisyear)\n",
+    "                    playing_df = make_substitution(playing_df, roster_df, thisevent, this_info_df)\n",
     "                else:\n",
     "                    thisevent['visiting_team'] = this_info_df['visteam'].tolist()[0]\n",
     "                    thisevent['home_team'] = this_info_df['hometeam'].tolist()[0]\n",
