--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -75,8 +75,8 @@
    "source": [
     "#mygames = ['NY1193809221']\n",
     "\n",
-    "mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300']\n",
-    "#mygames = ['BAL201304210']\n",
+    "#mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300']\n",
+    "mygames = ['BAL201304210']\n",
     "\n",
     "#mygames += ['BAL201305170', 'BAL201405010', 'BAL201406130', 'BAL201406250', 'MIA201407030', 'PIT201605180']\n",
     "#mygames += ['SDN201606150', 'WAS201607200', 'BAL201608180']\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +300,7 @@
     "#    print(players_curr)\n",
     "    return (players_curr, basers)\n",
     "\n",
-    "def advance_runners(evnt, basers, oots, scr, teem):   # If there is baserunning info provided, obey it\n",
+    "def advance_runners(evnt, basers, oots, scr, teem, debug):   # If there is baserunning info provided, obey it\n",
     "    \n",
     "    # If there are multiple baserunning events, split them around ;\n",
     "    x = evnt['baserunning'].split(';')\n",
@@ -346,7 +346,7 @@
     "    \n",
     "    return (evnt, basers, oots, scr)\n",
     "\n",
-    "def advance_batter(evnt, basers, oots, scr, teem):   \n",
+    "def advance_batter(evnt, basers, oots, scr, teem, debug):   \n",
     "    \n",
     "#    print('\\n')    \n",
     "#    print('Advancing runners, then batter: Inning {0:.0f}, side {1:.0f}'.format(evnt['inning'], evnt['home_or_visitor']))\n",
@@ -397,8 +397,11 @@
     "\n",
     "    elif (evnt['play'][0] == 'H'):\n",
     "        if (evnt['play'][1] == 'R'):\n",
+    "            print('Home run!')\n",
+    "            print('Score was ',scr)\n",
     "            scr[teem] = scr[teem] + 1\n",
     "            basers = ['', '', '']\n",
+    "            print('Score is now ',scr)\n",
     "        elif (evnt['play'][1] == 'P'):  # HP means hit by pitch\n",
     "            basers[0] = evnt['batterID']\n",
     "        else:\n",
@@ -426,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -436,16 +439,162 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BAL201208060...\n",
-      "BAL201208300...\n",
-      "BAL201209300...\n",
-      "SEA201208150...\n",
+      "BAL201304210...\n",
+      "Inning 1, side 0\n",
+      "[1, 0, 'crawc002', 'K']\n",
+      "[1, 0, 'ellim001', 'K']\n",
+      "[1, 0, 'gonza003', '43/G']\n",
+      "\n",
+      "\n",
+      "Inning 1, side 1\n",
+      "[1, 1, 'mclon001', 'S7/F-']\n",
+      "[1, 1, 'machm001', 'WP.1-2']\n",
+      "Wild pitch!\n",
+      "[1, 1, 'machm001', 'K']\n",
+      "[1, 1, 'markn001', 'S8/G.2-H']\n",
+      "[1, 1, 'jonea003', 'HP.1-2']\n",
+      "[1, 1, 'davic003', 'S9/L.2-3;1-2']\n",
+      "[1, 1, 'wietm001', 'K']\n",
+      "[1, 1, 'hardj003', 'S9/L.3-H;2-H;1-3;B-2(TH)']\n",
+      "[1, 1, 'flahr001', '7/F']\n",
+      "\n",
+      "\n",
+      "Inning 2, side 0\n",
+      "[2, 0, 'kempm001', '8/F']\n",
+      "[2, 0, 'ethia001', '5/P5F']\n",
+      "[2, 0, 'hairj002', '43/G']\n",
+      "\n",
+      "\n",
+      "Inning 2, side 1\n",
+      "[2, 1, 'reimn001', '53/G']\n",
+      "[2, 1, 'mclon001', '13/G']\n",
+      "[2, 1, 'machm001', 'K']\n",
+      "\n",
+      "\n",
+      "Inning 3, side 0\n",
+      "[3, 0, 'ellia001', 'W']\n",
+      "[3, 0, 'schus001', 'S8/L.1-3']\n",
+      "[3, 0, 'sellj002', 'K']\n",
+      "[3, 0, 'crawc002', 'W.1-2']\n",
+      "[3, 0, 'ellim001', '7/SF/F.3-H']\n",
+      "[3, 0, 'gonza003', 'W.2-3;1-2']\n",
+      "[3, 0, 'kempm001', 'K']\n",
+      "\n",
+      "\n",
+      "Inning 3, side 1\n",
+      "[3, 1, 'markn001', '3!1/G']\n",
+      "[3, 1, 'jonea003', 'HR/78/F']\n",
+      "[3, 1, 'davic003', 'S9/L']\n",
+      "[3, 1, 'wietm001', '46(1)3/GDP']\n",
+      "\n",
+      "\n",
+      "Inning 4, side 0\n",
+      "[4, 0, 'ethia001', 'K']\n",
+      "[4, 0, 'hairj002', '5!3/G']\n",
+      "[4, 0, 'ellia001', 'K']\n",
+      "\n",
+      "\n",
+      "Inning 4, side 1\n",
+      "[4, 1, 'hardj003', '63/G']\n",
+      "[4, 1, 'flahr001', 'K']\n",
+      "[4, 1, 'reimn001', 'K']\n",
+      "\n",
+      "\n",
+      "Inning 5, side 0\n",
+      "[5, 0, 'schus001', 'W']\n",
+      "[5, 0, 'sellj002', 'HP.1-2']\n",
+      "[5, 0, 'crawc002', 'W.2-3;1-2']\n",
+      "[5, 0, 'ellim001', 'S8/L.3-H;2-H;1-3']\n",
+      "[5, 0, 'gonza003', 'NP']\n",
+      "[5, 0, 'gonza003', 'D7/F.3-H;1-3']\n",
+      "[5, 0, 'kempm001', 'S7/L.3-H;2-3']\n",
+      "[5, 0, 'ethia001', 'K+PB.1-2']\n",
+      "[5, 0, 'hairj002', '5/P5F']\n",
+      "[5, 0, 'ellia001', 'W']\n",
+      "[5, 0, 'schus001', 'NP']\n",
+      "[5, 0, 'hernr002', '43/G']\n",
+      "\n",
+      "\n",
+      "Inning 5, side 1\n",
+      "[5, 1, 'mclon001', 'W']\n",
+      "[5, 1, 'machm001', '64(1)3/GDP']\n",
+      "[5, 1, 'markn001', 'S8/G+']\n",
+      "[5, 1, 'jonea003', 'NP']\n",
+      "[5, 1, 'jonea003', 'S7/L.1-2']\n",
+      "[5, 1, 'davic003', 'K']\n",
+      "\n",
+      "\n",
+      "Inning 6, side 0\n",
+      "[6, 0, 'sellj002', '3/BG']\n",
+      "[6, 0, 'crawc002', 'W']\n",
+      "[6, 0, 'ellim001', 'K']\n",
+      "[6, 0, 'gonza003', '3/G']\n",
+      "\n",
+      "\n",
+      "Inning 6, side 1\n",
+      "[6, 1, 'wietm001', 'NP']\n",
+      "[6, 1, 'wietm001', '7/F']\n",
+      "[6, 1, 'hardj003', '53/G']\n",
+      "[6, 1, 'flahr001', 'W']\n",
+      "[6, 1, 'reimn001', '8/F']\n",
+      "\n",
+      "\n",
+      "Inning 7, side 0\n",
+      "[7, 0, 'kempm001', 'S9/F']\n",
+      "[7, 0, 'ethia001', 'K']\n",
+      "[7, 0, 'hairj002', '3/P3F']\n",
+      "[7, 0, 'ellia001', 'SB2']\n",
+      "[7, 0, 'ellia001', 'S9/G.2-H;B-2(THH)']\n",
+      "[7, 0, 'hernr002', 'NP']\n",
+      "[7, 0, 'hernr002', 'K']\n",
+      "\n",
+      "\n",
+      "Inning 7, side 1\n",
+      "[7, 1, 'mclon001', 'NP']\n",
+      "[7, 1, 'mclon001', '63/G']\n",
+      "[7, 1, 'machm001', '43/G']\n",
+      "[7, 1, 'markn001', '63/G']\n",
+      "\n",
+      "\n",
+      "Inning 8, side 0\n",
+      "[8, 0, 'sellj002', 'K']\n",
+      "[8, 0, 'crawc002', '3/G']\n",
+      "[8, 0, 'ellim001', '9/F']\n",
+      "\n",
+      "\n",
+      "Inning 8, side 1\n",
+      "[8, 1, 'jonea003', 'NP']\n",
+      "[8, 1, 'jonea003', '9/L']\n",
+      "[8, 1, 'davic003', 'D8/F+']\n",
+      "[8, 1, 'wietm001', '43/G.2-3']\n",
+      "[8, 1, 'hardj003', '63/G']\n",
+      "\n",
+      "\n",
+      "Inning 9, side 0\n",
+      "[9, 0, 'gonza003', 'NP']\n",
+      "[9, 0, 'gonza003', 'S8/G']\n",
+      "[9, 0, 'kempm001', 'S8/G.1-2']\n",
+      "[9, 0, 'ethia001', '13/G.2-3;1-2']\n",
+      "[9, 0, 'hairj002', '7/SF/F.3-H']\n",
+      "[9, 0, 'ellia001', '8/F']\n",
+      "\n",
+      "\n",
+      "Inning 9, side 1\n",
+      "[9, 1, 'flahr001', 'NP']\n",
+      "[9, 1, 'flahr001', '7/F']\n",
+      "[9, 1, 'reimn001', 'S7/G']\n",
+      "[9, 1, 'mclon001', '8/F']\n",
+      "[9, 1, 'machm001', '64(1)/FO/G']\n",
+      "\n",
+      "\n",
       "Writing file...\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
+    "debug = True\n",
+    "\n",
     "roster_df = load_rosters()\n",
     "\n",
     "events_df = pandas.DataFrame()\n",
@@ -482,6 +631,8 @@
     "    for ing in theseinnings:\n",
     "#        print ('Inning ',ing)\n",
     "        for side in range(0,2):                           # iter through each half-inning\n",
+    "            if (debug):\n",
+    "                print('Inning {0:.0f}, side {1:.0f}'.format(ing, side))\n",
     "            halfinn = thisgame_df[(thisgame_df['inning'] == ing) & (thisgame_df['home_or_visitor'] == side)]\n",
     "            onbase = ['', '', '']\n",
     "            nOuts = 0            #     and there are no outs\n",
@@ -493,9 +644,11 @@
     "                    thisyear = this_info_df['date'].apply(lambda x: x.year)\n",
     "                    (playing_df, onbase) = make_substitution(playing_df, roster_df, thisevent, this_info_df, onbase)\n",
     "                else:\n",
-    "#                    print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event']].tolist())\n",
+    "                    if (debug):\n",
+    "                        print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event']].tolist())\n",
     "                    thisevent['visiting_team'] = this_info_df['visteam'].tolist()[0]\n",
     "                    thisevent['home_team'] = this_info_df['hometeam'].tolist()[0]\n",
+    "                    thisevent['date'] = this_info_df['date'].tolist()[0]\n",
     "                    thisevent['inning'] = ing\n",
     "                    if (side == 0):\n",
     "                        thisevent['batting_team'] = thisevent['visiting_team']\n",
@@ -521,7 +674,8 @@
     "                            onbase,\n",
     "                            nOuts,\n",
     "                            score,\n",
-    "                           side)               \n",
+    "                            side,\n",
+    "                            debug)               \n",
     "\n",
     "                    # If the play starts with fielder info or is a strikeout, increment outs\n",
     "                    if (re.match(r'[0-9K]+',thisevent['play'])):\n",
@@ -533,7 +687,8 @@
     "                            onbase,\n",
     "                            nOuts,\n",
     "                            score,\n",
-    "                            side)\n",
+    "                            side,\n",
+    "                            debug)\n",
     "\n",
     "                    # update info based on the play that has occurred\n",
     "                    thisevent['outs'] = nOuts\n",
@@ -545,14 +700,15 @@
     "\n",
     "                # finally, append this play to the list of plays\n",
     "                game_events_df = game_events_df.append(thisevent)\n",
-    "                \n",
+    "            if (debug):\n",
+    "                print('\\n')\n",
     "    game_events_df = game_events_df[game_events_df['event_type'] == 'play']\n",
     "    game_events_df = game_events_df.reset_index()\n",
     "    game_events_df.index.name = 'event_in_game'\n",
     "    \n",
     "    events_df = pandas.concat((events_df, game_events_df), axis=0)\n",
     "\n",
-    "#display_order = ['gameID', 'event_in_game', 'event_type', 'inning', 'batterID']\n",
+    "#display_order = ['gameID', 'date', event_in_game']\n",
     "display_order = ['inning', 'home_or_visitor', 'batterID']\n",
     "display_order += ['play', 'modifiers', 'baserunning', 'outs']\n",
     "display_order += ['runner1b', 'runner2b', 'runner3b', 'visitor_score', 'home_score']\n",
@@ -562,15 +718,191 @@
     "events_df = events_df.reset_index()\n",
     "\n",
     "events_df['event_in_game'] = events_df['event_in_game'] + 1  # make it a 1-based counter\n",
+    "events_df['date'] = pandas.to_datetime(events_df['date'], errors='coerce')\n",
+    "\n",
     "events_df.index.name = 'eventID'\n",
     "\n",
     "events_df.sort_values('gameID')\n",
     "#events_df = events_df[display_order]\n",
     "#print('Final score: ',score)\n",
-    "\n",
+    "#events_df\n",
     "print('Writing file...')\n",
     "events_df.to_csv('aaamygames.csv', encoding='utf-8')\n",
     "print('Done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inning</th>\n",
+       "      <th>hv</th>\n",
+       "      <th>batterID</th>\n",
+       "      <th>play</th>\n",
+       "      <th>mod</th>\n",
+       "      <th>br</th>\n",
+       "      <th>outs</th>\n",
+       "      <th>runner1b</th>\n",
+       "      <th>runner2b</th>\n",
+       "      <th>runner3b</th>\n",
+       "      <th>visitor_score</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>abflag</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>pitcherID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>eventID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>markn001</td>\n",
+       "      <td>3!1</td>\n",
+       "      <td>G</td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td></td>\n",
+       "      <td>fifes001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>jonea003</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>78/F</td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>jonea003</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td></td>\n",
+       "      <td>fifes001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>davic003</td>\n",
+       "      <td>S9</td>\n",
+       "      <td>L</td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>davic003</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td></td>\n",
+       "      <td>fifes001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>wietm001</td>\n",
+       "      <td>46(1)3</td>\n",
+       "      <td>GDP</td>\n",
+       "      <td></td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>davic003</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td></td>\n",
+       "      <td>fifes001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         inning   hv  batterID    play   mod br  outs  runner1b runner2b  \\\n",
+       "eventID                                                                    \n",
+       "25       3.0     1.0  markn001  3!1     G        1.0                       \n",
+       "26       3.0     1.0  jonea003  HR      78/F     1.0   jonea003            \n",
+       "27       3.0     1.0  davic003  S9      L        1.0   davic003            \n",
+       "28       3.0     1.0  wietm001  46(1)3  GDP      2.0   davic003            \n",
+       "\n",
+       "        runner3b  visitor_score  home_score  abflag comment pitcherID  \n",
+       "eventID                                                                \n",
+       "25                1.0            3.0         1.0             fifes001  \n",
+       "26                1.0            3.0         1.0             fifes001  \n",
+       "27                1.0            3.0         1.0             fifes001  \n",
+       "28                1.0            3.0         1.0             fifes001  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_df['hv'] = events_df['home_or_visitor']\n",
+    "events_df['mod'] = events_df['modifiers']\n",
+    "events_df['br'] = events_df['baserunning']\n",
+    "\n",
+    "display_order = ['inning', 'hv', 'batterID']\n",
+    "display_order += ['play', 'mod', 'br', 'outs']\n",
+    "display_order += ['runner1b', 'runner2b', 'runner3b', 'visitor_score', 'home_score', 'abflag', 'comment', 'pitcherID']\n",
+    "\n",
+    "\n",
+    "events_df[display_order][(events_df['inning'] == 3) & (events_df['hv'] == 1)]"
    ]
   },
   {
