Another game tested: BAL201304210
Passed test for:
Dodgers @ Orioles, 4/21/2013

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import numpy\n",
@@ -28,20 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# runs in about 5 minutes\n",
     "#with open('events.json','r') as f:\n",
@@ -59,24 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#mygames = ['NY1193809221']\n",
     "\n",
-    "#mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300']\n",
-    "mygames = ['BAL201304210']\n",
+    "mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210']\n",
     "\n",
     "#mygames += ['BAL201305170', 'BAL201405010', 'BAL201406130', 'BAL201406250', 'MIA201407030', 'PIT201605180']\n",
     "#mygames += ['SDN201606150', 'WAS201607200', 'BAL201608180']\n",
@@ -98,19 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_team', 'sub_batting_order', 'sub_position']\n",
@@ -127,19 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_rosters():\n",
     "    all_rosters_df = pandas.read_csv('fullroster.csv')\n",
@@ -218,10 +176,11 @@
     "\n",
     "def split_event(df):\n",
     "    df['play'] = df['event'].str.split('/').str.get(0)\n",
-    "    df['modifiers'] = df['event'].str.split('/',n=1).str.get(1)\n",
-    "    df['play'] = df['event'].str.split('/').str.get(0)\n",
+    "    df['play'] = df['play'].str.split('.').str.get(0)\n",
+    "    \n",
     "    df['modifiers'] = df['event'].str.split('/',n=1).str.get(1)\n",
     "    df['modifiers'] = df['modifiers'].fillna('')\n",
+    "\n",
     "    df['baserunning'] = df['event'].str.split('.',n=1).str.get(1)\n",
     "    df['baserunning'] = df['baserunning'].fillna('')\n",
     "    df['modifiers'] = df['modifiers'].str.split('.').str.get(0)\n",
@@ -347,7 +306,6 @@
     "    return (evnt, basers, oots, scr)\n",
     "\n",
     "def advance_batter(evnt, basers, oots, scr, teem, debug):   \n",
-    "    \n",
     "#    print('\\n')    \n",
     "#    print('Advancing runners, then batter: Inning {0:.0f}, side {1:.0f}'.format(evnt['inning'], evnt['home_or_visitor']))\n",
     "    \n",
@@ -356,9 +314,9 @@
     "        if ('B' not in evnt['baserunning']):   # now advance the batter to first, unless he's explicitly out\n",
     "            basers[0] = evnt['batterID']\n",
     "            \n",
-    "    elif (evnt['play'[0] == 'W']):\n",
+    "    elif (evnt['play'][0] == 'W'):\n",
     "        if (re.match(r'WP',evnt['play'])):\n",
-    "            print('Wild pitch!')\n",
+    "#            print('Wild pitch!')\n",
     "            evnt['abflag'] = 0\n",
     "        elif ('B' not in evnt['baserunning']):\n",
     "            basers[0] = evnt['batterID']\n",
@@ -370,7 +328,7 @@
     "        \n",
     "    elif (evnt['play'][0] == 'S'):\n",
     "        if (evnt['play'][1] == 'B'):   # a single as opposed to a stolen base\n",
-    "            print('Stolen base!')\n",
+    "#            print('Stolen base!')\n",
     "            stolen_base = int(evnt['play'][2])\n",
     "            orig_base = stolen_base - 1\n",
     "            basers[stolen_base-1] = basers[orig_base-1]\n",
@@ -397,27 +355,29 @@
     "\n",
     "    elif (evnt['play'][0] == 'H'):\n",
     "        if (evnt['play'][1] == 'R'):\n",
-    "            print('Home run!')\n",
-    "            print('Score was ',scr)\n",
+    "#            print('Home run!')\n",
+    "#            print('Score was ',scr)\n",
     "            scr[teem] = scr[teem] + 1\n",
     "            basers = ['', '', '']\n",
-    "            print('Score is now ',scr)\n",
-    "        elif (evnt['play'][1] == 'P'):  # HP means hit by pitch\n",
+    "#            print('Score is now ',scr)\n",
+    "        elif (evnt['play'][1] == 'P'):  # hit by pitch\n",
     "            basers[0] = evnt['batterID']\n",
-    "        else:\n",
-    "            print('H but not R or P')\n",
     "    \n",
     "    elif (evnt['play'][0] == 'C'):   # caught stealing\n",
-    "        print('Caught stealing!')\n",
+    "#        print('Caught stealing!')\n",
     "        stolen_base = int(evnt['play'][2])\n",
     "        orig_base = stolen_base - 1\n",
     "        oots = oots + 1\n",
     "        basers[orig_base-1] = ''\n",
-    "        print(basers)    \n",
+    "#        print(basers)    \n",
     "        evnt['abflag'] = 0\n",
-    "        \n",
+    "\n",
+    "    elif (evnt['play'][0] == 'N'):  # No play\n",
+    "        evnt['abflag'] = 0\n",
+    "    \n",
     "    else:\n",
-    "        print('wtf starting letter not in set')\n",
+    "        print('wtf starting letter not in set!')\n",
+    "        print(evnt['play'])\n",
     "\n",
     "#    print ('Now on base: [{0}, {1}, {2}] with {3} outs; score {4}-{5}'.format(basers[0], basers[1], basers[2], oots, scr[0], scr[1]))\n",
     "#    print('\\n')\n",
@@ -429,178 +389,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BAL201304210...\n",
-      "Inning 1, side 0\n",
-      "[1, 0, 'crawc002', 'K']\n",
-      "[1, 0, 'ellim001', 'K']\n",
-      "[1, 0, 'gonza003', '43/G']\n",
-      "\n",
-      "\n",
-      "Inning 1, side 1\n",
-      "[1, 1, 'mclon001', 'S7/F-']\n",
-      "[1, 1, 'machm001', 'WP.1-2']\n",
-      "Wild pitch!\n",
-      "[1, 1, 'machm001', 'K']\n",
-      "[1, 1, 'markn001', 'S8/G.2-H']\n",
-      "[1, 1, 'jonea003', 'HP.1-2']\n",
-      "[1, 1, 'davic003', 'S9/L.2-3;1-2']\n",
-      "[1, 1, 'wietm001', 'K']\n",
-      "[1, 1, 'hardj003', 'S9/L.3-H;2-H;1-3;B-2(TH)']\n",
-      "[1, 1, 'flahr001', '7/F']\n",
-      "\n",
-      "\n",
-      "Inning 2, side 0\n",
-      "[2, 0, 'kempm001', '8/F']\n",
-      "[2, 0, 'ethia001', '5/P5F']\n",
-      "[2, 0, 'hairj002', '43/G']\n",
-      "\n",
-      "\n",
-      "Inning 2, side 1\n",
-      "[2, 1, 'reimn001', '53/G']\n",
-      "[2, 1, 'mclon001', '13/G']\n",
-      "[2, 1, 'machm001', 'K']\n",
-      "\n",
-      "\n",
-      "Inning 3, side 0\n",
-      "[3, 0, 'ellia001', 'W']\n",
-      "[3, 0, 'schus001', 'S8/L.1-3']\n",
-      "[3, 0, 'sellj002', 'K']\n",
-      "[3, 0, 'crawc002', 'W.1-2']\n",
-      "[3, 0, 'ellim001', '7/SF/F.3-H']\n",
-      "[3, 0, 'gonza003', 'W.2-3;1-2']\n",
-      "[3, 0, 'kempm001', 'K']\n",
-      "\n",
-      "\n",
-      "Inning 3, side 1\n",
-      "[3, 1, 'markn001', '3!1/G']\n",
-      "[3, 1, 'jonea003', 'HR/78/F']\n",
-      "[3, 1, 'davic003', 'S9/L']\n",
-      "[3, 1, 'wietm001', '46(1)3/GDP']\n",
-      "\n",
-      "\n",
-      "Inning 4, side 0\n",
-      "[4, 0, 'ethia001', 'K']\n",
-      "[4, 0, 'hairj002', '5!3/G']\n",
-      "[4, 0, 'ellia001', 'K']\n",
-      "\n",
-      "\n",
-      "Inning 4, side 1\n",
-      "[4, 1, 'hardj003', '63/G']\n",
-      "[4, 1, 'flahr001', 'K']\n",
-      "[4, 1, 'reimn001', 'K']\n",
-      "\n",
-      "\n",
-      "Inning 5, side 0\n",
-      "[5, 0, 'schus001', 'W']\n",
-      "[5, 0, 'sellj002', 'HP.1-2']\n",
-      "[5, 0, 'crawc002', 'W.2-3;1-2']\n",
-      "[5, 0, 'ellim001', 'S8/L.3-H;2-H;1-3']\n",
-      "[5, 0, 'gonza003', 'NP']\n",
-      "[5, 0, 'gonza003', 'D7/F.3-H;1-3']\n",
-      "[5, 0, 'kempm001', 'S7/L.3-H;2-3']\n",
-      "[5, 0, 'ethia001', 'K+PB.1-2']\n",
-      "[5, 0, 'hairj002', '5/P5F']\n",
-      "[5, 0, 'ellia001', 'W']\n",
-      "[5, 0, 'schus001', 'NP']\n",
-      "[5, 0, 'hernr002', '43/G']\n",
-      "\n",
-      "\n",
-      "Inning 5, side 1\n",
-      "[5, 1, 'mclon001', 'W']\n",
-      "[5, 1, 'machm001', '64(1)3/GDP']\n",
-      "[5, 1, 'markn001', 'S8/G+']\n",
-      "[5, 1, 'jonea003', 'NP']\n",
-      "[5, 1, 'jonea003', 'S7/L.1-2']\n",
-      "[5, 1, 'davic003', 'K']\n",
-      "\n",
-      "\n",
-      "Inning 6, side 0\n",
-      "[6, 0, 'sellj002', '3/BG']\n",
-      "[6, 0, 'crawc002', 'W']\n",
-      "[6, 0, 'ellim001', 'K']\n",
-      "[6, 0, 'gonza003', '3/G']\n",
-      "\n",
-      "\n",
-      "Inning 6, side 1\n",
-      "[6, 1, 'wietm001', 'NP']\n",
-      "[6, 1, 'wietm001', '7/F']\n",
-      "[6, 1, 'hardj003', '53/G']\n",
-      "[6, 1, 'flahr001', 'W']\n",
-      "[6, 1, 'reimn001', '8/F']\n",
-      "\n",
-      "\n",
-      "Inning 7, side 0\n",
-      "[7, 0, 'kempm001', 'S9/F']\n",
-      "[7, 0, 'ethia001', 'K']\n",
-      "[7, 0, 'hairj002', '3/P3F']\n",
-      "[7, 0, 'ellia001', 'SB2']\n",
-      "[7, 0, 'ellia001', 'S9/G.2-H;B-2(THH)']\n",
-      "[7, 0, 'hernr002', 'NP']\n",
-      "[7, 0, 'hernr002', 'K']\n",
-      "\n",
-      "\n",
-      "Inning 7, side 1\n",
-      "[7, 1, 'mclon001', 'NP']\n",
-      "[7, 1, 'mclon001', '63/G']\n",
-      "[7, 1, 'machm001', '43/G']\n",
-      "[7, 1, 'markn001', '63/G']\n",
-      "\n",
-      "\n",
-      "Inning 8, side 0\n",
-      "[8, 0, 'sellj002', 'K']\n",
-      "[8, 0, 'crawc002', '3/G']\n",
-      "[8, 0, 'ellim001', '9/F']\n",
-      "\n",
-      "\n",
-      "Inning 8, side 1\n",
-      "[8, 1, 'jonea003', 'NP']\n",
-      "[8, 1, 'jonea003', '9/L']\n",
-      "[8, 1, 'davic003', 'D8/F+']\n",
-      "[8, 1, 'wietm001', '43/G.2-3']\n",
-      "[8, 1, 'hardj003', '63/G']\n",
-      "\n",
-      "\n",
-      "Inning 9, side 0\n",
-      "[9, 0, 'gonza003', 'NP']\n",
-      "[9, 0, 'gonza003', 'S8/G']\n",
-      "[9, 0, 'kempm001', 'S8/G.1-2']\n",
-      "[9, 0, 'ethia001', '13/G.2-3;1-2']\n",
-      "[9, 0, 'hairj002', '7/SF/F.3-H']\n",
-      "[9, 0, 'ellia001', '8/F']\n",
-      "\n",
-      "\n",
-      "Inning 9, side 1\n",
-      "[9, 1, 'flahr001', 'NP']\n",
-      "[9, 1, 'flahr001', '7/F']\n",
-      "[9, 1, 'reimn001', 'S7/G']\n",
-      "[9, 1, 'mclon001', '8/F']\n",
-      "[9, 1, 'machm001', '64(1)/FO/G']\n",
-      "\n",
-      "\n",
-      "Writing file...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "debug = True\n",
+    "debug = 0\n",
+    "\n",
+    "nGames = len(allgames_df)\n",
+    "cnt = 0\n",
     "\n",
     "roster_df = load_rosters()\n",
     "\n",
     "events_df = pandas.DataFrame()\n",
     "\n",
     "for thisgameID,thisrow in allgames_df.iterrows():\n",
-    "    print(thisgameID+'...')\n",
+    "    cnt = cnt + 1\n",
+    "    print('Processing game {0:,.0f} of {1:,.0f}: {2}...'.format(cnt, nGames, thisgameID))\n",
     "    game_events_df = pandas.DataFrame()\n",
     "        \n",
     "    thisgame_df = pandas.DataFrame(thisrow['events'], columns=column_list)\n",
@@ -631,7 +438,7 @@
     "    for ing in theseinnings:\n",
     "#        print ('Inning ',ing)\n",
     "        for side in range(0,2):                           # iter through each half-inning\n",
-    "            if (debug):\n",
+    "            if (debug > 0):\n",
     "                print('Inning {0:.0f}, side {1:.0f}'.format(ing, side))\n",
     "            halfinn = thisgame_df[(thisgame_df['inning'] == ing) & (thisgame_df['home_or_visitor'] == side)]\n",
     "            onbase = ['', '', '']\n",
@@ -644,7 +451,7 @@
     "                    thisyear = this_info_df['date'].apply(lambda x: x.year)\n",
     "                    (playing_df, onbase) = make_substitution(playing_df, roster_df, thisevent, this_info_df, onbase)\n",
     "                else:\n",
-    "                    if (debug):\n",
+    "                    if (debug > 0):\n",
     "                        print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event']].tolist())\n",
     "                    thisevent['visiting_team'] = this_info_df['visteam'].tolist()[0]\n",
     "                    thisevent['home_team'] = this_info_df['hometeam'].tolist()[0]\n",
@@ -700,9 +507,12 @@
     "\n",
     "                # finally, append this play to the list of plays\n",
     "                game_events_df = game_events_df.append(thisevent)\n",
-    "            if (debug):\n",
+    "            if (debug > 0):\n",
     "                print('\\n')\n",
+    "                \n",
     "    game_events_df = game_events_df[game_events_df['event_type'] == 'play']\n",
+    "    game_events_df = game_events_df[game_events_df['play'] != 'NP']\n",
+    "\n",
     "    game_events_df = game_events_df.reset_index()\n",
     "    game_events_df.index.name = 'event_in_game'\n",
     "    \n",
@@ -733,165 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>inning</th>\n",
-       "      <th>hv</th>\n",
-       "      <th>batterID</th>\n",
-       "      <th>play</th>\n",
-       "      <th>mod</th>\n",
-       "      <th>br</th>\n",
-       "      <th>outs</th>\n",
-       "      <th>runner1b</th>\n",
-       "      <th>runner2b</th>\n",
-       "      <th>runner3b</th>\n",
-       "      <th>visitor_score</th>\n",
-       "      <th>home_score</th>\n",
-       "      <th>abflag</th>\n",
-       "      <th>comment</th>\n",
-       "      <th>pitcherID</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>eventID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>markn001</td>\n",
-       "      <td>3!1</td>\n",
-       "      <td>G</td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td></td>\n",
-       "      <td>fifes001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>jonea003</td>\n",
-       "      <td>HR</td>\n",
-       "      <td>78/F</td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>jonea003</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td></td>\n",
-       "      <td>fifes001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>davic003</td>\n",
-       "      <td>S9</td>\n",
-       "      <td>L</td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>davic003</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td></td>\n",
-       "      <td>fifes001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>wietm001</td>\n",
-       "      <td>46(1)3</td>\n",
-       "      <td>GDP</td>\n",
-       "      <td></td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>davic003</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td></td>\n",
-       "      <td>fifes001</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         inning   hv  batterID    play   mod br  outs  runner1b runner2b  \\\n",
-       "eventID                                                                    \n",
-       "25       3.0     1.0  markn001  3!1     G        1.0                       \n",
-       "26       3.0     1.0  jonea003  HR      78/F     1.0   jonea003            \n",
-       "27       3.0     1.0  davic003  S9      L        1.0   davic003            \n",
-       "28       3.0     1.0  wietm001  46(1)3  GDP      2.0   davic003            \n",
-       "\n",
-       "        runner3b  visitor_score  home_score  abflag comment pitcherID  \n",
-       "eventID                                                                \n",
-       "25                1.0            3.0         1.0             fifes001  \n",
-       "26                1.0            3.0         1.0             fifes001  \n",
-       "27                1.0            3.0         1.0             fifes001  \n",
-       "28                1.0            3.0         1.0             fifes001  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "events_df['hv'] = events_df['home_or_visitor']\n",
     "events_df['mod'] = events_df['modifiers']\n",
@@ -901,8 +557,10 @@
     "display_order += ['play', 'mod', 'br', 'outs']\n",
     "display_order += ['runner1b', 'runner2b', 'runner3b', 'visitor_score', 'home_score', 'abflag', 'comment', 'pitcherID']\n",
     "\n",
+    "#mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210']\n",
     "\n",
-    "events_df[display_order][(events_df['inning'] == 3) & (events_df['hv'] == 1)]"
+    "events_df[display_order]\n",
+    "#events_df[display_order][(events_df['gameID'] == 'BAL201208060') & (events_df['inning'] == 1)] #& (events_df['hv'] == 0)]"
    ]
   },
   {
